<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/online"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_baseline_noise_control_off_24"
            app:drawableTint="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/photo"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/text_working"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/working"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/full_name" />

        <TextView
            android:id="@+id/time_working"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@id/text_working"
            app:layout_constraintTop_toBottomOf="@id/full_name"
            tools:text="@tools:sample/date/mmddyy" />

        <Button
            android:id="@+id/btn_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_right_24"
            android:stateListAnimator="@null"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_working"
            tools:text="@tools:sample/lorem[8]" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_position"
            tools:text="@tools:sample/lorem[20]" />

        <Button
            android:id="@+id/btn_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/reward"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:backgroundTint="#E4E4E4"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_reward"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E4E4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_reward" />

        <TextView
            android:id="@+id/communication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginVertical="5dp"
            android:text="@string/contact_with_me"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recycler_reward" />

        <TextView
            android:id="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/birthday"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_cake_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/communication" />

        <TextView
            android:id="@+id/birthday_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/birthday"
            app:layout_constraintStart_toEndOf="@id/birthday"
            tools:text="@tools:sample/date/mmddyy" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:text="@string/phone"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_phone_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthday" />

        <TextView
            android:id="@+id/phone_number_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/phone_number"
            app:layout_constraintStart_toStartOf="@id/birthday_field"
            tools:text="@tools:sample/date/mmddyy" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            android:text="@string/email"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_alternate_email_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number" />

        <TextView
            android:id="@+id/email_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/email"
            app:layout_constraintStart_toStartOf="@id/phone_number_field"
            tools:text="@tools:sample/date/mmddyy" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/location"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <TextView
            android:id="@+id/location_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/location"
            app:layout_constraintStart_toStartOf="@id/email_field"
            tools:text="@tools:sample/date/mmddyy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
